# grokcli2api

./: .env.example  .gitignore  ANALYZE_REPORT.md  ARCHITECTURE.md  README.md  main.py  pyproject.toml
grokcli2api/: __init__.py  __main__.py  config.py  server.py
grokcli2api/auth/: __init__.py  api_key.py  providers.py  session.py
grokcli2api/grok/: __init__.py  client.py  headers.py  models.py
grokcli2api/openai/: __init__.py  converter.py  schemas.py
grokcli2api/utils/: __init__.py  logger.py
tests/: __init__.py  smoke.py  test_refresh.py
