[project]
name = "grokcli2api"
version = "0.1.0"
description = "Reverse-engineered Grok CLI client exposed as an OpenAI-compatible HTTP API"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "MapleLeaf" }
]
license = { text = "MIT" }
keywords = ["grok", "openai", "api", "proxy", "xai", "reverse-engineering"]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx[http2]>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "rich>=13.9.0",
    "typing-extensions>=4.12.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[project.scripts]
grokcli2api = "grokcli2api.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["grokcli2api"]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.pytest.ini_options]
asyncio_mode = "auto"
